signup creates user and added user model and customer model

--- a/webshop-rf1/src/app/pages/signup/signup.component.html
+++ b/webshop-rf1/src/app/pages/signup/signup.component.html
@@ -10,7 +10,7 @@
       <input type="password" [(ngModel)]="password" />
     </div>
     <div class="form-actions">
-      <button (click)="signup()">Sign Up</button>
+      <button (click)="signUp()">Sign Up</button>
     </div>
   </div>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
