--- a/webshop-rf1/src/app/pages/login/login.component.html
+++ b/webshop-rf1/src/app/pages/login/login.component.html
@@ -15,3 +15,4 @@
   </div>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
 </div>
+<button (click)="logout()">logout</button>
