home and search kesz

--- a/webshop-rf1/src/app/pages/home/home.component.html
+++ b/webshop-rf1/src/app/pages/home/home.component.html
@@ -10,7 +10,7 @@
               {{product.productName}}
             </div>
             <div class="card-subtitle">
-              Price: {{product.price + "Huf"}}
+              Price: {{product.price + " $"}}
             </div>
           </mat-card-content>
         </mat-card>
