Admin page css adjustments

--- a/webshop-rf1/src/app/pages/admin/admin.component.html
+++ b/webshop-rf1/src/app/pages/admin/admin.component.html
@@ -1,3 +1,5 @@
-<app-products />
-<app-customer />
-<app-categories />
+<div class="basic-admin-page">
+  <app-products />
+  <app-customer />
+  <app-categories />
+</div>
