--- a/webshop-rf1/src/app/pages/login/login.component.html
+++ b/webshop-rf1/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="form">
     <div class="form-group">
       <input type="email" [(ngModel)]="email" />
-      <label for="email">e-mail</label>
+      <label for="email">Email</label>
     </div>
     <div class="form-group">
       <input type="password" [(ngModel)]="password" />
