--- a/webshop-rf1/src/app/pages/signup/signup.component.html
+++ b/webshop-rf1/src/app/pages/signup/signup.component.html
@@ -2,12 +2,12 @@
   <h1>Sign Up</h1>
   <div class="form">
     <div class="form-group">
-      <label for="email">Email:</label>
       <input type="email" [(ngModel)]="email" />
+      <label for="email">Email</label>
     </div>
     <div class="form-group">
-      <label for="password">Password:</label>
       <input type="password" [(ngModel)]="password" />
+      <label for="password">Password</label>
     </div>
     <div class="form-actions">
       <button (click)="signUp()">Sign Up</button>
