Profile started + Login Cleanup

--- a/webshop-rf1/src/app/pages/login/login.component.scss
+++ b/webshop-rf1/src/app/pages/login/login.component.scss
@@ -83,9 +83,9 @@
                     color: black;
                 }
             }
-            .logout{
-                border: 2px solid #e43b1d;
-                background-color: #e43b1d;
+            .signup{
+                border: 2px solid #1d6de4;
+                background-color: #1d6de4;
             }
         }
     }
