--- a/webshop-rf1/src/app/pages/signup/signup.component.html
+++ b/webshop-rf1/src/app/pages/signup/signup.component.html
@@ -11,6 +11,7 @@
     </div>
     <div class="form-actions">
       <button (click)="signUp()">Sign Up</button>
+      <button class="login" (click)="toLogin()">Log In</button>
     </div>
   </div>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
