--- a/webshop-rf1/src/app/pages/signup/signup.component.scss
+++ b/webshop-rf1/src/app/pages/signup/signup.component.scss
@@ -84,6 +84,10 @@
                     color: black;
                 }
             }
+            .login{
+                border: 2px solid #1d6de4;
+                background-color: #1d6de4;
+            }
         }
     }
 
