--- a/webshop-rf1/src/app/pages/login/login.component.html
+++ b/webshop-rf1/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-actions">
       <button (click)="login()">Login</button>
-      <button class="logout" (click)="logout()">Log out</button>
+      <button class="signup" (click)="signup()">Sign Up</button>
     </div>
   </div>
   <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
