--- a/webshop-rf1/src/app/pages/admin/products/products.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.html
@@ -12,7 +12,7 @@
     <tr *ngFor="let product of products">
       <td>{{ product.productName }}</td>
       <td>{{ product.price }}</td>
-      <td><button (click)="onDelete(product.productId)">Delete</button></td>
+      <td><button (click)="openDialog(product)">Delete</button></td>
     </tr>
   </tbody>
 </table>
