--- a/webshop-rf1/src/app/pages/admin/products/products.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.html
@@ -16,4 +16,6 @@
     </tr>
   </tbody>
 </table>
-<button type="button" class="add-btn">Add new product</button>
+<button (click)="openNewProductDialog()" type="button" class="add-btn">
+  Add new product
+</button>
