--- a/webshop-rf1/src/app/pages/home/search/search.component.html
+++ b/webshop-rf1/src/app/pages/home/search/search.component.html
@@ -1,5 +1,5 @@
 <div>
-    <input type="text" placeholder="Search Garden Tools" [(ngModel)]="searchTerm" (change)="search()">
+    <input type="text" placeholder="Search Products" [(ngModel)]="searchTerm" (change)="search()">
     <button (click)="search()"><mat-icon>search</mat-icon>
     </button>
 </div>
