Customer delete and css changes

--- a/webshop-rf1/src/app/pages/admin/customer/customer.component.html
+++ b/webshop-rf1/src/app/pages/admin/customer/customer.component.html
@@ -17,7 +17,11 @@
       </td>
       <td>{{ customer.phoneNumber }}</td>
       <td>{{ customer.homeAdress }}</td>
-      <td><button type="button">Delete</button></td>
+      <td>
+        <mat-icon (click)="onDelete(customer.customerId)"
+          >delete_forever</mat-icon
+        >
+      </td>
     </tr>
   </tbody>
 </table>
