--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.html
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.html
@@ -9,7 +9,7 @@
   <tbody>
     <tr *ngFor="let category of categories">
       <td>{{ category }}</td>
-      <td><button type="button">Delete</button></td>
+      <td><mat-icon>delete_forever</mat-icon></td>
     </tr>
   </tbody>
 </table>
