--- a/webshop-rf1/src/app/pages/admin/products/new-product-dialog/new-product-dialog.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/new-product-dialog/new-product-dialog.component.html
@@ -1,32 +1,55 @@
-<div class="form-container">
-  <h2>New Product</h2>
+<div [ngSwitch]="edit">
+  <div *ngSwitchCase="'new'" class="form-container">
+    <h2>New Product</h2>
 
-  <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-    <div class="input-container">
-      <label for="productName">Product Name:</label>
-      <input type="text" id="productName" formControlName="productName" />
-    </div>
+    <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
+      <div class="input-container">
+        <label for="productName">Product Name:</label>
+        <input type="text" id="productName" formControlName="productName" />
+      </div>
 
-    <div class="input-container">
-      <label for="price">Price:</label>
-      <input type="number" id="price" formControlName="price" />
-    </div>
+      <div class="input-container">
+        <label for="price">Price:</label>
+        <input type="number" id="price" formControlName="price" />
+      </div>
 
-    <div class="input-container">
-      <label for="description">Description:</label>
-      <textarea id="description" formControlName="description"></textarea>
-    </div>
+      <div class="input-container">
+        <label for="description">Description:</label>
+        <textarea id="description" formControlName="description"></textarea>
+      </div>
 
-    <div class="input-container">
-      <label for="imageUrl">Image URL:</label>
-      <input type="text" id="imageUrl" formControlName="imageUrl" />
-    </div>
+      <div class="input-container">
+        <label for="imageUrl">Image URL:</label>
+        <input type="text" id="imageUrl" formControlName="imageUrl" />
+      </div>
 
-    <div class="btn-container">
-      <button mat-button mat-dialog-close class="add-btn" type="button">
-        Cancel
-      </button>
-      <button class="add-btn" type="submit">Submit</button>
-    </div>
-  </form>
+      <div class="btn-container">
+        <button mat-button mat-dialog-close class="add-btn" type="button">
+          Cancel
+        </button>
+        <button
+          style="background-color: rgb(231, 78, 78)"
+          class="add-btn"
+          type="submit"
+        >
+          Submit
+        </button>
+      </div>
+    </form>
+  </div>
+  <div *ngSwitchCase="'edit'" class="form-container">
+    <h2>Edit Product</h2>
+    <h3>Soon</h3>
+
+    <form [formGroup]="productForm">
+      <div class="btn-container">
+        <button mat-button mat-dialog-close class="add-btn" type="button">
+          Cancel
+        </button>
+        <button style="background-color: rgb(231, 78, 78)" class="add-btn">
+          OK
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
