--- a/webshop-rf1/src/app/pages/home/tags/tags.component.html
+++ b/webshop-rf1/src/app/pages/home/tags/tags.component.html
@@ -1,2 +1,3 @@
-
-<li *ngFor="let tag of tags" [value]=tag.tagId (click)="onSaveSelectedTag(tag.tagId)">{{tag.tagName}}</li>
+<div class="tagWrapper">
+    <li *ngFor="let tag of tags" [value]=tag.tagId (click)="onSaveSelectedTag(tag.tagId)">{{tag.tagName}}</li>
+</div>
