Profile form frontend done

--- a/webshop-rf1/src/app/pages/profile/profile.component.html
+++ b/webshop-rf1/src/app/pages/profile/profile.component.html
@@ -1,6 +1,28 @@
 <div class="wrapper">
-    <label>My Purchases:</label>
+    <div class="customer-form">
+        <label class="become-customer">Become a customer</label>
+        <div class="names">
+            <div class="form-group">
+                <input type="firstName" [(ngModel)]="firstName" />
+                <label for="firstName">First Name</label>
+            </div>
+            <div class="form-group">
+                <input type="lastName" [(ngModel)]="lastName" />
+                <label for="lastName">Last Name</label>
+            </div>
+        </div>
+        <div class="form-group">
+            <input type="homeAddress" [(ngModel)]="homeAddress" />
+            <label for="homeAddress">Address</label>
+        </div>
+        <div class="form-group">
+            <input type="phoneNumber" [(ngModel)]="phoneNumber" />
+            <label for="phoneNumber">Phone Number</label>
+        </div>
+        <button (click)="becomeCustomer()">Become Customer</button>
+    </div>
     <div class="purchases">
+        <label>My Purchases:</label>
         <table>
             <thead>
                 <tr>
@@ -10,7 +32,7 @@
                 </tr>
             </thead>
             <tbody>
-                
+
                 <tr *ngFor="let purchase of purchasedProducts">
                     <td><img [src]="purchase.imageUrl" alt=""></td>
                     <td>{{ purchase.productName }}</td>
