--- a/webshop-rf1/src/app/pages/product/comment/comment.component.html
+++ b/webshop-rf1/src/app/pages/product/comment/comment.component.html
@@ -1,7 +1,7 @@
+<hr class="line">
 <div class = "commentBox">
-    {{username}}<br>
-    Értékelés: {{comment?.rating}}<br>
-    <p>{{comment?.comment}}</p>
+    <p id="comment-header">{{username}}:    {{comment?.rating}}/5</p>
+    <p id="comment-body">{{comment?.comment}}</p>
     <button type="button" *ngIf = "isAdmin" (click)="deleteComment()">Admin: Törlés</button>
 </div>
 
