--- a/webshop-rf1/src/app/shared/header/header.component.scss
+++ b/webshop-rf1/src/app/shared/header/header.component.scss
@@ -1,4 +1,5 @@
 ul {
+  height: 52px;
   display: flex;
   justify-content: flex-end;
   list-style-type: none;
@@ -10,6 +11,7 @@ ul {
 
 
 li a {
+  height: 52px;
   display: flex;
   justify-content: flex-end;
   color: white;
