customer table read

--- a/webshop-rf1/src/app/pages/profile/profile.component.html
+++ b/webshop-rf1/src/app/pages/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div class="customer-form">
+    <div class="customer-form" *ngIf="!isCustomer">
         <label class="become-customer">Become a customer</label>
         <div class="names">
             <div class="form-group">
