--- a/webshop-rf1/src/app/pages/home/tags/tags.component.scss
+++ b/webshop-rf1/src/app/pages/home/tags/tags.component.scss
@@ -1,14 +1,12 @@
-li{
+a{
   display: inline-block;
   font-size: 17px;
   padding: 10px;
   margin: 10px;
   background-color: #e9e1e1;
   border-radius: 10px;
+  text-decoration: none; 
+  color: purple;        
+  cursor: pointer; 
 }
-.tagWrapper{
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
-  left: 200;
-}
+
