--- a/webshop-rf1/src/app/pages/home/home.component.html
+++ b/webshop-rf1/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<html>
 <app-search></app-search>
 <app-tags></app-tags>
 <ul class="card-list">
@@ -17,3 +18,4 @@
       </a>
     </li>
   </ul>
+</html>
