--- a/webshop-rf1/src/app/pages/home/home.component.scss
+++ b/webshop-rf1/src/app/pages/home/home.component.scss
@@ -1,3 +1,7 @@
+html{
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
+}
 ul {
     display: flex;
     justify-content:  center;
@@ -8,15 +12,17 @@ ul {
 }
 ul li a{
     width: 20rem;
-    height: 25rem;
-    border:  1px solid rgb(128, 0, 128);
+    border:  1px solid #aa0465;
     border-radius: 1rem;
     margin: 0.5rem;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    color: #bb00cc;
-    background: rgba(0, 0, 0, 0.75);
+    color: #aa0465;
+    text-align: center;
+    text-decoration: none;
+    font-size: large;
+    font-weight: bold   ;
 }
 ul li{
     margin-bottom: 15px;
@@ -27,20 +33,23 @@ ul li{
 li a:hover{
     opacity: 0.9;
     cursor: pointer;
+    box-shadow: 4px 8px rgba(107, 107, 107, 0.9);
 }
-.content{
+.card-content{
+    vertical-align:middle;
+    height: 2.5rem;
     padding: .5rem 1rem;
     position: relative;
     font-size: medium;
     display: flex;
     justify-content: space-between;
-
+    background-color: #04aa49;
 }
-.price{
-    padding-top: .7rem;
+.card-subtitle{
+  //  padding-top: .7rem;
     float: left;
 }
-.name{
+.card-title{
     float: right;
 }
 
