Cart és Empty cart oldal hater bealitasa

--- a/webshop-rf1/src/app/pages/cart/cart.component.html
+++ b/webshop-rf1/src/app/pages/cart/cart.component.html
@@ -1,3 +1,4 @@
+<html>
 <app-empty-cart [visible]="!cart || cart.items.length <=0"
                 emptyCart="Cart Page is empty"
                 resetLinkText="Go to Home Page">
@@ -48,3 +49,4 @@
 
 </div>
 
+</html>
