--- a/webshop-rf1/src/app/pages/cart/empty-cart/empty-cart.component.html
+++ b/webshop-rf1/src/app/pages/cart/empty-cart/empty-cart.component.html
@@ -1,3 +1,4 @@
+<html>
 <mat-card *ngIf="visible" class="app-empty-cart">
   <mat-card-header>
     <mat-card-title>{{emptyCart}}</mat-card-title>
@@ -6,3 +7,4 @@
     <a routerLink="{{resetLinkRoute}}" mat-button>{{resetLinkText}}</a>
   </mat-card-content>
 </mat-card>
+</html>
