--- a/webshop-rf1/src/app/pages/cart/cart.component.scss
+++ b/webshop-rf1/src/app/pages/cart/cart.component.scss
@@ -1,3 +1,7 @@
+html{
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
+}
 .container{
     display: flex;
     flex-wrap: wrap;
