--- a/webshop-rf1/src/app/pages/profile/profile.component.scss
+++ b/webshop-rf1/src/app/pages/profile/profile.component.scss
@@ -23,7 +23,7 @@
     display: flex;
 }
 .form-group{
-    
+
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -51,7 +51,8 @@ input {
 
 }
 button {
-    width: 50%;
+    width: 70%;
+    height: 15%;
     border: 2px solid #04aa49;
     background-color: #04aa49;
     padding: 12px;
