--- a/webshop-rf1/src/app/pages/profile/profile.component.scss
+++ b/webshop-rf1/src/app/pages/profile/profile.component.scss
@@ -2,7 +2,8 @@
     padding: 5%;
     height: 90%;
     width: 90%;
-    background-color: #f0f0f0;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
 }
 .customer-form{
     padding-top: 2%;
