--- a/webshop-rf1/src/app/pages/signup/signup.component.scss
+++ b/webshop-rf1/src/app/pages/signup/signup.component.scss
@@ -2,7 +2,8 @@
 
 :host {
     display: flex;
-    background-color: #f0f0f0;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
     align-items: center;
     justify-content: center;
     height: 100vh;
