--- a/webshop-rf1/src/app/pages/admin/admin.component.scss
+++ b/webshop-rf1/src/app/pages/admin/admin.component.scss
@@ -3,4 +3,6 @@
     display: flex;
     align-items: center;
     gap: 2rem;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
   }
