--- a/webshop-rf1/src/app/pages/home/home.component.scss
+++ b/webshop-rf1/src/app/pages/home/home.component.scss
@@ -1,4 +1,5 @@
-html{
+.bg{
+    height: 100%;
     background-repeat: no-repeat;
     background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
 }
