--- a/webshop-rf1/src/app/pages/product/comment/comment.component.html
+++ b/webshop-rf1/src/app/pages/product/comment/comment.component.html
@@ -2,6 +2,6 @@
 <div class = "commentBox">
     <p id="comment-header">{{username}}:    {{comment?.rating}}/5</p>
     <p id="comment-body">{{comment?.comment}}</p>
-    <button type="button" *ngIf = "isAdmin" (click)="deleteComment()">Admin: Törlés</button>
+    <button type="button" *ngIf = "isAdmin" (click)="deleteComment()">Delete comment</button>
 </div>
 
