--- a/webshop-rf1/src/app/pages/product/product.component.html
+++ b/webshop-rf1/src/app/pages/product/product.component.html
@@ -14,7 +14,7 @@
             </div>
             <div id="buy-div">
                 <input id="cart-button" type="submit" value="Add to cart" (click)="addCart()" /> 
-                <label id="price">{{product?.price}}.00 Ft</label>
+                <label id="price">{{product?.price}}.00 $</label>
             </div>
             <div id="comments">
                 <app-comment-form [review]="previousReview"></app-comment-form>
