--- a/webshop-rf1/src/app/pages/product/product.component.scss
+++ b/webshop-rf1/src/app/pages/product/product.component.scss
@@ -32,10 +32,14 @@ img {
     max-height: 550px;
     max-width: 600px;
     border-radius: 30px;
-    box-shadow: 20px 20px 60px #b3b3b3,
+    box-shadow: 20px 20px 60px #b3b3b3;
+    margin-bottom: 20px;
+    font-weight: bolder;
+    font-variant: small-caps;
 }
 
 #name {
+    
     font-size: 20px;
 }
 
@@ -85,7 +89,7 @@ img {
 #description-div {
     max-height: 40%;
     margin-top: 40px;
-    width: 90%;
+    width: 95%;
     background-color: #f5f5f5;
     border-radius: 20px;
     display: flex;
@@ -120,10 +124,11 @@ img {
 }
 
 #comments {
+    margin-bottom: 20px;
     max-height: 60%;
     overflow-y: scroll;
     overflow-x: hidden;
-    width: 90%;
+    width: 95%;
     background-color: #f5f5f5;
     border-radius: 20px;
     scrollbar-color: #888 transparent;
