--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.scss
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.scss
@@ -11,22 +11,21 @@ table {
   }
 
   th, td {
-    border: 0.1rem solid #ddd;
+    border: 0.1rem solid #aa0465;
     padding: 0.5rem;
     text-align: left;
   }
   
   th {
-    background-color: #f2f2f2;
+    background-color: #04aa49;
   }
-  
   tr:hover {
     background-color: #f5f5f5;
   }
   
   button {
     background-color: #f44336;
-    color: white;
+    color: #aa0465;
     border: none;
     padding: 0.25rem 0.5rem;
     text-align: center;
@@ -52,10 +51,13 @@ table {
     border: none;
     border-radius: 4px; 
     background-color: rgb(155, 149, 149); 
-    color: white;
+    color: #aa0465;
     transition: background-color 0.3s ease;
   }
   
   .add-btn:hover {
     background-color: grey; 
+  }
+  h2{
+    text-align: center;
   }
