--- a/webshop-rf1/src/app/pages/admin/products/products.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.html
@@ -11,7 +11,7 @@
   <tbody>
     <tr *ngFor="let product of products">
       <td>{{ product.productName }}</td>
-      <td>{{ product.price }}</td>
+      <td>{{ product.price }} $</td>
       <td>
         <mat-icon class="modify_img" (click)="openDialog(product)"
           >delete_forever</mat-icon
