--- a/webshop-rf1/src/app/pages/admin/products/products.component.scss
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.scss
@@ -11,15 +11,14 @@ table {
   }
 
   th, td {
-    border: 0.1rem solid #ddd;
+    border: 0.1rem solid #aa0465;
     padding: 0.5rem;
     text-align: left;
   }
   
   th {
-    background-color: #f2f2f2;
+    background-color: #04aa49;
   }
-  
   tr:hover {
     background-color: #f5f5f5;
   }
@@ -53,7 +52,7 @@ table {
     border: none;
     border-radius: 4px; 
     background-color: rgb(155, 149, 149); 
-    color: white;
+     color: #aa0465;
     transition: background-color 0.3s ease;
   }
   
@@ -63,4 +62,7 @@ table {
 
   .modify_img{
     margin: 0.2rem;
+  }
+  h2{
+    text-align: center;
   }
