főoldal search border

--- a/webshop-rf1/src/app/pages/home/search/search.component.scss
+++ b/webshop-rf1/src/app/pages/home/search/search.component.scss
@@ -6,8 +6,8 @@ div {
 }
 div input {
     border-radius: 10rem 0 0 10rem;
-    border: none;
-    height: 1.5rem;
+    border:  1px solid #aa0465;
+    height: 1.35rem;
     width: 20rem;
     background-color: white;
     padding: 1.2rem;
