--- a/webshop-rf1/src/app/pages/admin/products/products.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.html
@@ -16,7 +16,9 @@
         <mat-icon class="modify_img" (click)="openDialog(product)"
           >delete_forever</mat-icon
         >
-        <mat-icon class="modify_img" (click)="openNewProductDialog('edit')"
+        <mat-icon
+          class="modify_img"
+          (click)="openNewProductDialog('edit', product)"
           >edit</mat-icon
         >
       </td>
