tezst dokumentáció, egyénmi jelentes, rendeles angolosítás

--- a/webshop-rf1/src/app/pages/cart/cart.component.html
+++ b/webshop-rf1/src/app/pages/cart/cart.component.html
@@ -34,7 +34,7 @@
       </div>
       <div>
         <button class="remove-button" (click)="removeFromCart(cartItem)">
-          Törlés
+          Delete
         </button>
       </div>
     </li>
@@ -44,7 +44,7 @@
     <div>
       <div class="product-count">{{cart.totalCount}} db</div>
       <div class="total-price">{{cart.totalPrice}} $</div>
-      <div><button class="checkout-button" (click)="checkout()">Rendelés</button></div>
+      <div><button class="checkout-button" (click)="checkout()">Order</button></div>
     </div>
   </div>
 
