--- a/webshop-rf1/src/app/pages/profile/profile.component.scss
+++ b/webshop-rf1/src/app/pages/profile/profile.component.scss
@@ -4,7 +4,12 @@
     width: 90%;
     background-repeat: no-repeat;
     background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
+    display: flex;
+
 }
+.purchases {
+    flex: 1; 
+  }
 .customer-form{
     padding-top: 2%;
     padding-bottom: 2%;
@@ -19,6 +24,8 @@
     align-items: center;
     justify-content: space-evenly;
     border-radius: 30px;
+    flex: 0.5; 
+    margin-right: 20px;
 }
 .names{
     display: flex;
