--- a/webshop-rf1/src/app/pages/admin/products/new-product-dialog/new-product-dialog.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/new-product-dialog/new-product-dialog.component.html
@@ -1,27 +1,44 @@
 <div class="form-container">
   <h2 *ngIf="edit == 'new'">New Product</h2>
   <h2 *ngIf="edit == 'edit'">
-    Edit the following product: {{ product?.productName }}
+    Edit the following product: <strong>{{ product?.productName }}</strong>
   </h2>
 
   <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
-    <div class="input-container">
-      <label for="productName">Product Name:</label>
-      <input type="text" id="productName" formControlName="productName" />
-    </div>
+    <mat-form-field [formGroup]="productForm" (ngSubmit)="onSubmit()">
+      <mat-label>Product Name</mat-label>
+      <input
+        matInput
+        type="text"
+        id="productName"
+        formControlName="productName"
+        placeholder="Xiaomi Mi 9"
+      />
+    </mat-form-field>
 
-    <div class="input-container">
-      <label for="price">Price:</label>
-      <input type="number" id="price" formControlName="price" />
-    </div>
+    <mat-form-field [formGroup]="productForm" (ngSubmit)="onSubmit()">
+      <mat-label>Price</mat-label>
+      <input
+        matInput
+        type="number"
+        id="price"
+        formControlName="price"
+        placeholder="1500"
+      />
+    </mat-form-field>
 
-    <div class="input-container">
-      <label for="description">Description:</label>
-      <textarea id="description" formControlName="description"></textarea>
-    </div>
+    <mat-form-field [formGroup]="productForm" (ngSubmit)="onSubmit()">
+      <mat-label>Description</mat-label>
+      <textarea
+        matInput
+        type="text"
+        id="description"
+        formControlName="description"
+        placeholder="This product is....."
+      ></textarea>
+    </mat-form-field>
 
-    <label for="selectTags">Select tag</label>
-
+    <mat-label>Description</mat-label>
     <mat-form-field>
       <select
         matNativeControl
