--- a/webshop-rf1/src/app/pages/admin/products/new-product-dialog/new-product-dialog.component.scss
+++ b/webshop-rf1/src/app/pages/admin/products/new-product-dialog/new-product-dialog.component.scss
@@ -27,8 +27,9 @@
   .form-container{
     display: flex;
     flex-direction: column;
-    height: 35rem;
-    width: 25rem;
+    height: fit-content;
+    width: fit-content;
+    min-width: 40rem;
     padding: 2rem;
     gap: 3rem;
   }
@@ -49,6 +50,7 @@
 
   h2{
     font-size: 30px;
+    color: white;
   }
 
   
