admin backend done

--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.html
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.html
@@ -2,15 +2,12 @@
 <table>
   <thead>
     <tr>
-      <th>Category</th>
-      <th>Modify</th>
+      <th style="text-align: center">Category</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let category of categories">
       <td>{{ category }}</td>
-      <td><mat-icon>delete_forever</mat-icon></td>
     </tr>
   </tbody>
 </table>
-<button type="button" class="add-btn">Add new category</button>
