--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.html
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.html
@@ -7,10 +7,9 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let category of categories">
-      <td>{{ category }}</td>
+    <tr *ngFor="let tag of tags">
+      <td>{{ tag.tagName }}</td>
       <td><mat-icon>delete_forever</mat-icon></td>
     </tr>
   </tbody>
 </table>
-<button type="button" class="add-btn">Add new category</button>
