--- a/webshop-rf1/src/app/pages/profile/profile.component.scss
+++ b/webshop-rf1/src/app/pages/profile/profile.component.scss
@@ -3,7 +3,6 @@
     height: 110%;
     width: 90%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(255, 254, 254), rgb(94, 94, 94));
     display: flex;
 
 }
@@ -83,4 +82,14 @@ button {
 .modify-customer{
     margin-top: 10px;
     font-size: 20pt;
+}
+img{
+    max-width: 120px;
+    max-height: 70px;
+    border-radius: 10px;
+}
+
+.row{
+    background-color: #f0f0f0;
+    border-radius: 20px;
 }
