--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.html
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.html
@@ -9,7 +9,7 @@
   <tbody>
     <tr *ngFor="let tag of tags">
       <td>{{ tag.tagName }}</td>
-      <td><mat-icon>delete_forever</mat-icon></td>
+      <td><mat-icon (click)="deleteTag(tag)">delete_forever</mat-icon></td>
     </tr>
   </tbody>
 </table>
