--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.scss
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.scss
@@ -11,21 +11,21 @@ table {
   }
 
   th, td {
-    border: 0.1rem solid #aa0465;
+    border: 0.1rem solid #3a2933;
     padding: 0.5rem;
     text-align: left;
   }
   
   th {
-    background-color: #04aa49;
+    background-color: #1db96b;
   }
   tr:hover {
     background-color: #f5f5f5;
   }
   
   button {
-    background-color: #f44336;
-    color: #aa0465;
+    background-color: #994843;
+    color: white;
     border: none;
     padding: 0.25rem 0.5rem;
     text-align: center;
