--- a/webshop-rf1/src/app/pages/admin/customer/customer.component.scss
+++ b/webshop-rf1/src/app/pages/admin/customer/customer.component.scss
@@ -17,7 +17,7 @@ table {
   }
   
   th {
-    background-color: #04aa49;
+    background-color: #1db96b;
   }
   tr:hover {
     background-color: #f5f5f5;
