--- a/webshop-rf1/src/app/pages/admin/products/products.component.scss
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.scss
@@ -11,13 +11,13 @@ table {
   }
 
   th, td {
-    border: 0.1rem solid #aa0465;
+    border: 0.1rem solid #442838;
     padding: 0.5rem;
     text-align: left;
   }
   
   th {
-    background-color: #04aa49;
+    background-color: #1db96b;
   }
   tr:hover {
     background-color: #f5f5f5;
@@ -52,7 +52,7 @@ table {
     border: none;
     border-radius: 4px; 
     background-color: rgb(155, 149, 149); 
-     color: #aa0465;
+     color: white;
     transition: background-color 0.3s ease;
   }
   
