--- a/webshop-rf1/src/app/pages/admin/categories/new-tag-dialog/new-tag-dialog.component.scss
+++ b/webshop-rf1/src/app/pages/admin/categories/new-tag-dialog/new-tag-dialog.component.scss
@@ -53,17 +53,15 @@
     color: white;
   }
 
+
+  .label{
+    color: white;
+  }
+
+
   
 
-  span{
-    color: gainsboro;
-  }
+  
 
   
-  ::ng-deep .mat-hint-label {
-    color: white !important;
-  }
-
-  .label {
-    color:white !important;
-  }
+  
