--- a/webshop-rf1/src/app/pages/admin/categories/categories.component.scss
+++ b/webshop-rf1/src/app/pages/admin/categories/categories.component.scss
@@ -51,7 +51,7 @@ table {
     border: none;
     border-radius: 4px; 
     background-color: rgb(155, 149, 149); 
-    color: #aa0465;
+    color: white;
     transition: background-color 0.3s ease;
   }
   
