--- a/webshop-rf1/src/app/pages/admin/products/products.component.html
+++ b/webshop-rf1/src/app/pages/admin/products/products.component.html
@@ -9,13 +9,17 @@
     </tr>
   </thead>
   <tbody>
-
     <tr *ngFor="let product of products">
       <td>{{ product.productName }}</td>
       <td>{{ product.price }} $</td>
       <td>
         <mat-icon class="modify_img" (click)="openDialog(product)"
           >delete_forever</mat-icon
+        >
+        <mat-icon
+          class="modify_img"
+          (click)="openNewProductDialog('edit', product)"
+          >edit</mat-icon
         >
       </td>
     </tr>
